--- a/src/components/layout user/scrollbar/scroll.scss
+++ b/src/components/layout user/scrollbar/scroll.scss
@@ -1,6 +1,19 @@
-.scroll-content {
-    position: relative;
-    display: block;
-    overflow: hidden; /* Ensure that native scrolling doesn't interfere */
-    width: 100%;
-  }
+// body {
+//   overscroll-behavior-y: none;
+//   user-select: none;
+//   background-color: whitesmoke;
+//   font-size: 16px;
+//   text-rendering: optimizeLegibility;
+//   -webkit-font-smoothing: antialiased;
+//   -moz-osx-font-smoothing: grayscale;
+// }
+
+.scroll-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  will-change: transform;
+  
+}
