--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .container {
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0px auto;
 }
 
@@ -73,19 +73,42 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-.slick-list {
-  margin: 0 -8px;
-}
-.slick-slide > div {
-  padding: 0 8px;
-}
-
-.image-gallery-thumbnail.active{
-  border: 4px solid orange !important;
-}
-.image-gallery-thumbnail:hover{
-  border: 4px solid orange !important;
+.cursor {
+  width: 20px;
+  height: 20px;
+  /* border: 1px solid white; */
+  border-radius: 50%;
+  position: absolute;
+  pointer-events: none;
 }
 
+.cursor::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  border: 2px solid blue;
+  border-radius: 50%;
+  opacity: .5;
+  top: -8px;
+  left: -8px;
+}
+
+@keyframes cursorAnim {
+  0% {
+      transform: scale(1);
+  }
+  50% {
+      transform: scale(5);
+  }
+  100% {
+      transform: scale(1);
+      opacity: 0;
+  }
+}
+
+.expand {
+  animation: cursorAnim .5s forwards;
+}
 
 
